--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ md5 = "0.7.0"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
 tokio = { version = "1.27.0", features = ["process", "rt", "full"] }
+url = { version = "2.3.1", features = ["serde"] }
 wry = "0.24.1"
