--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dirs = "5.0.0"
 md5 = "0.7.0"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
