--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 dirs = "5.0.0"
+http = "0.2.9"
 md5 = "0.7.0"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
