--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,4 @@ serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
 tokio = { version = "1.27.0", features = ["process", "rt", "full"] }
 url = { version = "2.3.1", features = ["serde"] }
-wry = "0.27.3"
+wry = { version = "0.27.3", features = ["transparent"] }
