--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ url = { version = "2.3.1", features = ["serde"] }
 wry = { version = "0.27.3", features = ["transparent"] }
 xdg-mime = "0.3.3"
 fs_extra = "1.3.0"
+log = "0.4.17"
 
 [dev-dependencies]
 serial_test = "2.0.0"
