--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ tokio = { version = "1.27.0", features = ["process", "rt", "full"] }
 url = { version = "2.3.1", features = ["serde"] }
 wry = { version = "0.27.3", features = ["transparent"] }
 xdg-mime = "0.3.3"
-fs_extra = "1.3.0"
+fs_extra = { git = "https://github.com/AeromeFileManager/fs_extra.git", branch = "symlinks" }
 log = "0.4.17"
 
 [dev-dependencies]
