--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ notify = "6.0.0"
 notify-debouncer-mini = "0.3.0"
 zip = "0.6.6"
 rayon = "1.7.0"
+serde_cbor = "0.11.2"
 
 [dev-dependencies]
 serial_test = "2.0.0"
