--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ notify-debouncer-mini = "0.3.0"
 zip = "0.6.6"
 rayon = "1.7.0"
 serde_cbor = "0.11.2"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 serial_test = "2.0.0"
